--- a/nice/index.html
+++ b/nice/index.html
@@ -6,7 +6,7 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="context container">
+    <div class="contact-container">
         <form action="" class="contact-left">
             <div class="contact-left-title">
                 <h2>Get in  Touch</h2>
@@ -14,12 +14,12 @@
             </div>
             <input type="text" name="name":placeholder="your name" class="contact-inputs" required>
 
-            <input type="text" name="name":placeholder="your name" class="contact-inputs" required>
+            <input type="email" name="email":placeholder="your Email" class="contact-inputs" required>
             <textarea name="message" placeholder="your message " class="contact-inputs" required ></textarea>
-            <button type="submit">submit<img src="/nice/assets/gradient.png" alt=""> </button>
+            <button type="submit">submit<img src="nice/assets/gradient.png" alt=""> </button>
         </form>
         <div class="contact-right">
-            <img src="/nice/assets/colorflow2.jpeg" />
+            <img src="nice/assets/colorflow2.jpeg"/>
             
         </div>
     </div>
