itworking thanks yt

--- a/nice/index.html
+++ b/nice/index.html
@@ -7,22 +7,26 @@
 </head>
 <body>
     <div class="contact-container">
-        <form action="" class="contact-left">
+        <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
             <div class="contact-left-title">
                 <h2>Get in  Touch</h2>
                 <hr>
             </div>
+            <input type="hidden" name="access_key" value="ee005de7-cfd7-47f3-95eb-1cf59c6265e8 ">
             <input type="text" name="name":placeholder="your name" class="contact-inputs" required>
-
+            
             <input type="email" name="email":placeholder="your Email" class="contact-inputs" required>
             <textarea name="message" placeholder="your message " class="contact-inputs" required ></textarea>
-            <button type="submit">submit<img src="nice/assets/gradient.png" alt=""> </button>
+            <button type="submit">submit<img src="/nice/IMG_20240325_172159_533.jpg" alt=""> </button>
         </form>
         <div class="contact-right">
-            <img src="nice/assets/colorflow2.jpeg"/>
+            <img src="/nice/IMG_20240325_172159_398.jpg"/>
             
         </div>
     </div>
 
 </body>
 </html>
+
+
+
